# moxie-framework

./: .gitignore  DockerHealthCheck.swift  INSTALLATION.md  INTEGRATION_WITH_OPENMOXIE.md  Package.swift  README.md  SimpleMoxieSwitcher.swift
SimpleMoxieSwitcher/: .gitignore  BUILD_SUMMARY.md  CHANGELOG.md  COMPLETE_CONTROL_GUIDE.md  FEATURES.md  GAMES_SYSTEM_AUDIT.md  IMPLEMENTATION_GUIDE.md  LICENSE  LINUX_PORT_PLAN.md  MACOS_IMPROVEMENTS_SUMMARY.md  PARENT_GUIDE.md  PARITY_AUDIT_MACOS_NEEDS.md  PERSONALITY_SHIFT_EXAMPLES.md  PERSONALITY_SHIFT_QUICKSTART.md  PERSONALITY_SHIFT_README.md  PERSONALITY_SHIFT_SPEC.md  Package.swift  README.md  REFACTORING_STRATEGY.md  SAFETY_ARCHITECTURE.md  SAFETY_EXECUTIVE_SUMMARY.md  SAFETY_README.md  SAFETY_VISUAL_GUIDE.md  create_app.sh  create_app_bundle.sh  create_dmg.sh  launch_with_focus.sh
SimpleMoxieSwitcher-Linux/: ACTUAL_STATUS.md  BUILD.md  CMakeLists.txt  README.md
SimpleMoxieSwitcher-Linux/qml/: Main.qml
SimpleMoxieSwitcher-Linux/qml/Analytics/: MemoryView.qml  UsageView.qml
SimpleMoxieSwitcher-Linux/qml/Chat/: ChatInterfaceView.qml
SimpleMoxieSwitcher-Linux/qml/Components/: GameModeCard.qml  NavButton.qml  StatBadge.qml
SimpleMoxieSwitcher-Linux/qml/Controls/: ControlsView.qml  RobotControlView.qml
SimpleMoxieSwitcher-Linux/qml/LanguageLearning/: ConversationPracticeView.qml  LanguageLearningWizardView.qml
SimpleMoxieSwitcher-Linux/qml/Settings/: SettingsView.qml
SimpleMoxieSwitcher-Linux/qml/Story/: StoryTimeView.qml
SimpleMoxieSwitcher-Linux/resources/: SimpleMoxieSwitcher.desktop  qml.qrc
SimpleMoxieSwitcher-Linux/src/: main.cpp
SimpleMoxieSwitcher-Linux/src/models/: ChildProfile.cpp  ChildProfile.h  Conversation.cpp  Conversation.h  Games.cpp  Games.h  LanguageLearning.cpp  LanguageLearning.h  Memory.cpp  Memory.h  Personality.cpp  Personality.h  UsageRecord.cpp  UsageRecord.h
SimpleMoxieSwitcher-Linux/src/services/: AIProviderService.cpp  AIProviderService.h  DockerService.cpp  DockerService.h  MQTTService.cpp  MQTTService.h  StorageService.cpp  StorageService.h
SimpleMoxieSwitcher-Linux/src/utils/: DIContainer.cpp  DIContainer.h
SimpleMoxieSwitcher-Linux/src/viewmodels/: ChatViewModel.cpp  ChatViewModel.h  ControlsViewModel.cpp  ControlsViewModel.h  GamesMenuViewModel.cpp  GamesMenuViewModel.h  UsageViewModel.cpp  UsageViewModel.h
SimpleMoxieSwitcher-Windows/: 100_PERCENT_VERIFIED.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PARITY_REPORT.md  README.md  SimpleMoxieSwitcher.sln  WINDOWS_UPDATE_SUMMARY.md  build-installer.ps1  build.cmd  build.ps1  installer.iss
SimpleMoxieSwitcher-Windows/SimpleMoxieSwitcher/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  SimpleMoxieSwitcher.csproj  app.manifest  appsettings.json
SimpleMoxieSwitcher/Resources/: AppIcon.icns
SimpleMoxieSwitcher/Scripts/: reset_for_testing.sh  test_docker_setup.sh  (+3 more)
SimpleMoxieSwitcherApp/: build.sh  create_app_bundle.sh
(+242 files in other folders)
